--- a/blogs/Vue.js/vue-cli/2.打包后静态资源路径问题.md
+++ b/blogs/Vue.js/vue-cli/2.打包后静态资源路径问题.md
@@ -1,5 +1,3 @@
-<template>
-  <pre>
 # 打包后静态资源路径问题
 2018-04-13 01:52:26
 ## 问题描述
@@ -14,7 +12,7 @@ npm run dev结果很完美
 既然我认为是webpack的配置问题，那么只要修改一下配置就得了，那么问题来了，这vue-cli V3.0，项目结构非常简洁，配置的问题都交给vue-cli-service了，要怎么去配置？&#x1F615;&#x1F615;&#x1F615;
 这样只能去看文档了，于是看到官方有这么一段话
 
-> ### vue.config.js
+> ### <font color=black>vue.config.js</font>
 Many aspects of a Vue CLI project can be configured by placing a `vue.config.js` file at the root of your project. The file may already exist depending on the features you selected when creating the project.
 `vue.config.js` should export an object, for example:
 ```js
@@ -62,10 +60,3 @@ module.exports = {
 )
 
 搞定收工
-  </pre>
-</template>
-
-<script>
-export default {}
-</script>
-<style lang="scss"></style>
