修改部分markdown的css样式

--- a/blogs/Vue.js/SSR服务端渲染/Nuxt.js/5.结合koa单独部署服务.md
+++ b/blogs/Vue.js/SSR服务端渲染/Nuxt.js/5.结合koa单独部署服务.md
@@ -1,8 +1,10 @@
 # 结合koa单独部署服务
+
 2018-04-20 00:47:07
+
 ## 准备工作
 既然是nuxt结合koa，那么当然需要nuxt和koa模块了，通过
-`npm install nuxt koa --save`
+` > npm install nuxt koa --save`
 安装上koa模块，搞定
 
 ## 搭建nuxt环境
