--- a/blogs/Vue.js/SSR服务端渲染/Nuxt.js/6.结合koa搭建前后端分离模版超详细讲解.md
+++ b/blogs/Vue.js/SSR服务端渲染/Nuxt.js/6.结合koa搭建前后端分离模版超详细讲解.md
@@ -40,7 +40,7 @@
 讲了这么多废话，来重点吧。
 `npm init`完之后，把所需的模块安装一下，在命令行输入
 
-`> npm install nuxt @nuxtjs/axios koa koa-router`
+`> npm install nuxt @nuxtjs/axios koa koa-router --save`
 ### 1. Nuxt环境
 先把nuxt页面渲染的部分搭建好，就是放几个页面进`pages/`目录下
 ![](
@@ -278,10 +278,10 @@ module.exports = {
 `package.json`和`nuxt.config.js`同时加入配置，注意的是**同时加入的端口必须是相同的，都是你希望页面渲染服务运行的端口！比如上面我的都是8087**
 `package.json`指定的，是通过npm方式启动时，nuxt提供视图渲染服务的端口（可被server.js中的端口覆盖）
 `nuxt.config.js`指定的，是页面发起请求的地址
-两者的端口*必须一致！必须一致！必须一致！**整个请求过程才能正常
+两者的端口**必须一致！必须一致！必须一致！**整个请求过程才能正常
 
 ## 代码地址
-[代码地址](https://github.com/710241969/my-nuxt-example/tree/master/nuxtjs-axios-koa)
+<a target="_blank" href="https://github.com/710241969/my-nuxt-example/tree/master/nuxtjs-axios-koa">代码地址</a>
 
 ## 参考
-* [@nuxtjs/axios官方文档](https://axios.nuxtjs.org/)
+* <a target="_blank" href="https://axios.nuxtjs.org/">@nuxtjs/axios官方文档</a>
