--- a/blogs/算法/leetcode/简单/189-旋转数组.md
+++ b/blogs/算法/leetcode/简单/189-旋转数组.md
@@ -40,14 +40,16 @@ Related problem: Reverse Words in a String II
 ```c++
 class Solution {
 public:
-    void rotate(vector<int>& nums, int k) {
+    void rotate(vector<int>& nums , int k)
+    {
         int length = nums.size();
         k = k % length;
-        if (0 == k) {
+        if ( 0 == k )
+        {
             return;
         }
-        nums.insert(nums.begin(), nums.begin() + length - k, nums.end());
-        nums.erase(nums.begin() + length, nums.end());
+        nums.insert(nums.begin() , nums.begin() + length - k , nums.end());
+        nums.erase(nums.begin() + length , nums.end());
     }
 };
 ```
