修改markdown代码样式

--- a/blogs/算法/leetcode/简单/136-只出现一次的数字.md
+++ b/blogs/算法/leetcode/简单/136-只出现一次的数字.md
@@ -45,7 +45,7 @@ public:
     int singleNumber(vector<int>& nums) {
         int num = 0;
 
-        for ( int item : nums )
+        for ( auto item : nums )
         {
             num = num^item;
         }
