--- a/blogs/算法/leetcode/简单/26-从排序数组中删除重复项.md
+++ b/blogs/算法/leetcode/简单/26-从排序数组中删除重复项.md
@@ -1,5 +1,5 @@
 
-# REMOVE DUPLICATES FROM SORTED ARRAY
+# Remove Duplicates From Sorted Array
 
 ## 英文
 Given a sorted array nums, remove the duplicates in-place such that each element appear only once and return the new length.
