--- a/blogs/算法/leetcode/简单/189 - 旋转数组.md
+++ b/blogs/算法/leetcode/简单/189 - 旋转数组.md
@@ -37,7 +37,7 @@ Related problem: Reverse Words in a String II
 * 要求使用空间复杂度为 O(1) 的原地算法。
 
 ## 解法
-**C++:**
+#### **C++:**
 ```c++
 class Solution {
 public:
@@ -55,7 +55,7 @@ public:
 };
 ```
 
-**JAVA:**
+#### **JAVA:**
 ```java
 class Solution {
     public void rotate(int[] nums, int k) {
@@ -82,7 +82,7 @@ class Solution {
 }
 ```
 
-**JS:**
+#### **JS:**
 ```javascript
 /**
  * @param {number[]} nums
