--- a/blogs/MySQL/安装.md
+++ b/blogs/MySQL/安装.md
@@ -18,7 +18,7 @@ wget https://dev.mysql.com/get/mysql-apt-config_0.8.10-1_all.deb
 
 第二步：Install the downloaded release package
 dpkg -i mysql-apt-config_w.x.y-z_all.deb
-我的是 dpkg mysql-apt-config_0.8.10-1_all.deb
+我的是 dpkg -i mysql-apt-config_0.8.10-1_all.deb
 
 第三步：Update package information from the MySQL APT repository with the following command (this step is mandatory):
 sudo apt-get update
