常规更新博客

--- a/blogs/LeetCode/中等/002 - 两数相加.md
+++ b/blogs/LeetCode/中等/002 - 两数相加.md
@@ -95,3 +95,45 @@ public:
     }
 };
 ```
+
+```PYTHON
+# Definition for singly-linked list.
+# class ListNode:
+#     def __init__(self, x):
+#         self.val = x
+#         self.next = None
+
+class Solution:
+    def addTwoNumbers(self, l1, l2):
+        """
+        :type l1: ListNode
+        :type l2: ListNode
+        :rtype: ListNode
+        """
+        tmp1 = l1
+        tmp2 = l2
+        carry = 0
+        result = None
+        tmp = None
+        while tmp1 or tmp2:
+            num1 = 0
+            if tmp1:
+                num1 = tmp1.val
+                tmp1 = tmp1.next
+            num2 = 0
+            if tmp2:
+                num2 = tmp2.val
+                tmp2 = tmp2.next
+            sum = num1 + num2 + carry
+            num = sum % 10
+            carry = math.floor(sum / 10)
+            if not result:
+                result = ListNode(num)
+                tmp = result
+            else:
+                tmp.next = ListNode(num)
+                tmp = tmp.next
+        if carry:
+            tmp.next = ListNode(carry)
+        return result
+```
