久违的日志更新

--- a/blogs/MySQL/安装使用.md
+++ b/blogs/MySQL/安装使用.md
@@ -56,7 +56,33 @@ mysql  Ver 14.14 Distrib 5.6.40, for Linux (x86_64) using  EditLine wrapper
 重启MySQL
 `service mysql restart`
 
-## apt-get
+## yum
+https://dev.mysql.com/doc/refman/8.0/en/linux-installation-yum-repo.html
+
+https://dev.mysql.com/doc/refman/8.0/en/linux-installation-yum-repo.html
+
+https://dev.mysql.com/downloads/file/?id=484922
+
+可能没有 wget ，可以装一个。参考
+
+[root@localhost src]# yum localinstall mysql80-community-release-el7-3.noarch.rpm
+
+[root@localhost src]# yum repolist enabled | grep "mysql.*-community.*"
+
+[root@localhost src]# yum install mysql-community-server
+
+[root@localhost src]# service mysqld start
+
+[root@localhost src]# service mysqld status
+
+[root@localhost src]# grep password /var/log/mysqld.log
+mysql> ALTER USER 'root'@'localhost' IDENTIFIED BY 'MyNewPass4!';
+
+[root@localhost ~]# firewall-cmd --list-all
+
+firewall-cmd --add-port=3306/tcp --permanent
+
+
 
 
 ### 流程步骤
