--- a/blogs/Java/设计模式/单例模式.md
+++ b/blogs/Java/设计模式/单例模式.md
@@ -97,3 +97,22 @@ constructor(inst); // 真正执行构造函数
 由于虚拟机的优化等导致指令重排了，所以刚好复制操作先执行先赋值了；但还没执行完构造函数，导致其他线程访问得到singleton变量不为null，但初始化还未完成，导致程序崩溃
 
 再说说 synchronized 关键字
+
+### 实现四
+不用锁，也可以实现懒加载的且线程安全。通过静态内部类
+```JAVA
+public class Singleton {
+    private Singleton() {
+
+    }
+
+    public static Singleton getInstance() {
+        return SingletonCreator.INSTANCE;
+    }
+
+    private static class SingletonCreator{
+        private static final Singleton INSTANCE = new Singleton();
+    }
+}
+```
+只有通过显式调用 getInstance 方法时，才会显式装载 SingletonHolder 类，从而实例化 instance（只有第一次使用这个单例的实例的时候才加载，同时不会有线程安全问题）
