--- a/blogs/MySQL/安装使用.md
+++ b/blogs/MySQL/安装使用.md
@@ -19,7 +19,7 @@ Ubuntu 14.04, 16.04, 17.10, 18.04
 要先添加MySQL APT repository到仓库列表
 下载这个DEB package，通过命令
 `wget mysql-apt-config_w.x.y-z_all.deb`
-具体可以看看官网的下载地址
+具体可以看看官网的下载地址`https://dev.mysql.com/downloads/repo/apt/`
 我的是
 `wget https://dev.mysql.com/get/mysql-apt-config_0.8.10-1_all.deb`
 没有wget的自己apt-get install一个，或者用其他的
