--- a/blogs/MySQL/安装使用.md
+++ b/blogs/MySQL/安装使用.md
@@ -59,9 +59,11 @@ mysql  Ver 14.14 Distrib 5.6.40, for Linux (x86_64) using  EditLine wrapper
 ## yum
 https://dev.mysql.com/doc/refman/8.0/en/linux-installation-yum-repo.html
 
-https://dev.mysql.com/doc/refman/8.0/en/linux-installation-yum-repo.html
+https://dev.mysql.com/downloads/repo/yum/
 
 https://dev.mysql.com/downloads/file/?id=484922
+
+wget https://repo.mysql.com//mysql80-community-release-el7-3.noarch.rpm
 
 可能没有 wget ，可以装一个。参考
 
@@ -76,11 +78,11 @@ https://dev.mysql.com/downloads/file/?id=484922
 [root@localhost src]# service mysqld status
 
 [root@localhost src]# grep password /var/log/mysqld.log
-mysql> ALTER USER 'root'@'localhost' IDENTIFIED BY 'MyNewPass4!';
+mysql> ALTER USER 'root'@'localhost' IDENTIFIED BY 'Wang123!';
 
 [root@localhost ~]# firewall-cmd --list-all
-
-firewall-cmd --add-port=3306/tcp --permanent
+[root@localhost ~]# firewall-cmd --add-port=3306/tcp --permanent
+[root@localhost ~]# firewall-cmd  --reload
 
 
 
